Fixed having horizontal scrollbar on room members list.

--- a/assets/css/application.styl
+++ b/assets/css/application.styl
@@ -1053,6 +1053,7 @@ room-members-sidebar-width = 200px
 
   .room-member-link
     display table
+    box-sizing border-box
     width 100%
     padding 5px 10px
     color #000
